--- a/app/views/clubs/index.html.haml
+++ b/app/views/clubs/index.html.haml
@@ -1,8 +1,8 @@
 %span.span-4
-  .span-4#header_box.club_background Club Listing
+  .span-4#header_box.club_background My Clubs
   .span-2= link_to '(Add a club)', new_club_path()
 %span.span-16
-  %span.span-16#header_box My Clubs
+  %span.span-16#header_box= current_user.name 
   %span.span-5
     %table
       = render :partial => 'shared/club', :collection => @clubs
