--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -1,9 +1,14 @@
 %span.span-4
-  .span-4#header_box.meeting_background Meeting
-  .span-2= link_to '(change)', edit_meeting_path(@meeting)
-  .span-2= link_to '(add a meeting)', new_meeting_path
+  .span-4#lead_box.meeting_background Meeting
+  .span-4#header_box.club_background
+    = link_to 'Club', @meeting.club
+  .span-4#header_box.member_background
+    = link_to 'Members', members_path
 %span.span-16  
-  %div.span-16#header_box= @meeting.meeting_date_pretty
+  .span-16#lead_box
+    .span-10= @meeting.meeting_date_pretty
+    .span-2= link_to '(edit)', edit_meeting_path(@meeting)
+    .span-2= link_to '(add)', new_meeting_path
   %h3.span-2 Theme:
   .span-8= @meeting.theme
   .span-16
