--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,14 +1,23 @@
 %span.span-4
-  .span-4#header_box.member_background Members
-  .span-4= link_to '(+ New Member)', new_member_path
+  .span-4#lead_box.member_background Members
+  .span-4#header_box.club_background 
+    = link_to "Club", current_club
+  .span-4#header_box.meeting_background 
+    = link_to "Meetings", meetings_path
 %span.span-16
+  .span-20#lead_box
+    = current_club.name
+
   %table
     %tr
       %th Name
+      %th e-mail 
       %th
     - @members.each do |member|
       %tr
         %td= link_to member.name, member
+        %td= member.email
   
+  = link_to '(New Member)', new_member_path
 %br
 
