--- a/app/views/roles/_form.html.haml
+++ b/app/views/roles/_form.html.haml
@@ -13,3 +13,4 @@
       = f.text_field :title
       .actions
         = f.submit 'Save'
+        = link_to ' or back to Meeting', meeting_path(@meeting)
