--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -1,9 +1,15 @@
-%span.span-4#header_box
-  .span-4.club_background Club
+%span.span-4
+  .span-4#lead_box.club_background Club
+  .span-4#header_box.meeting_background
+    = link_to 'Meetings', meetings_path 
+
+  .span-4#header_box.member_background
+    = link_to 'Members', members_path
 %span.span-16
   %div.span-20#header_box
     = @club.name
     = link_to '(edit)', edit_club_path(@club)
+    = link_to '(add)', new_club_path()
   %div.span-20
     %span.span-3
       %h3 Address
@@ -22,4 +28,3 @@
     %h4.member_background Members
     = render :partial => 'shared/member', :collection => @club.members.sort_by(&:name)
     = link_to "(+) New Member", new_member_path
-  %div.span-20= link_to '(Add a club)', new_club_path()
