--- a/app/views/meetings/index.html.haml
+++ b/app/views/meetings/index.html.haml
@@ -1,7 +1,7 @@
 .span-4
   .span-4#lead_box.meeting_background Meetings
   .span-4#header_box.club_background 
-    = link_to "Clubs", clubs_path
+    = link_to "Club", current_club
   .span-4#header_box.member_background
     =link_to "Members", members_path
 
