--- a/app/views/members/edit.html.haml
+++ b/app/views/members/edit.html.haml
@@ -2,5 +2,5 @@
   .span-4#header_box.member_background Member
   .span-2= link_to 'Remove Member', @member, :confirm => 'Are you sure?', :method => :delete
 %span.span-16
-  %span.span-last#header_box Edit member information
+  %span.span-last#lead_box Edit member information
   = render 'form'
