--- a/app/views/shared/_meeting.html.haml
+++ b/app/views/shared/_meeting.html.haml
@@ -1,2 +1,3 @@
-.side_entry
-  = link_to meeting.meeting_date, [@club, meeting]
+%tr
+  %td= link_to meeting.meeting_date, [@club, meeting]
+  %td= meeting.theme
