--- a/app/views/roles/new.html.haml
+++ b/app/views/roles/new.html.haml
@@ -1,12 +1,9 @@
-%span.span-4
+%span.span-4#lead_box
   %span.span-4.edit_label.meeting_background  Meeting
-  .span-2= link_to '(change)', edit_meeting_path(@meeting)
-  .span-2= link_to '(remove)', @meeting,:confirm => "Are you sure?", :method => :delete
-  .span-2= link_to '(Meeting)', meeting_path(@meeting)
 %span-16
-  %h2.span-16
-    = @meeting.meeting_date_pretty
-  %h3.span-16
+  .span-16#lead_box
+    = link_to @meeting.meeting_date_pretty, meeting_path(@meeting), :style => 'text-decoration: none'
+  .span-16#lead_box
     Add a Role:
   .span-16.prepend-4
     = render 'form'
