Tweaking back the primary club
Errors out on the link if it doesn't exist.  Needs to be built by default.

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -24,7 +24,7 @@
   .span-20  
     .span-3
       %h4 Primary Club
-    // .span-6= link_to @member.my_club.name, @member.my_club
+    .span-6= link_to @member.my_club.name, @member.my_club 
   .span-12#content_box
     %span.span-12
       %h3.meeting_background 
