--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -1,15 +1,13 @@
 %span.span-4
   .span-4#lead_box.club_background Club
-  .span-4#header_box.meeting_background
-    = link_to 'Meetings', meetings_path 
-
-  .span-4#header_box.member_background
-    = link_to 'Members', members_path
+  - if current_user.admin_for(current_club.id)
+    .span-4#header_box
+      = link_to '(edit)', edit_club_path(@club)
+    .span-4#header_box
+      = link_to '(add)', new_club_path()
 %span.span-16
   .span-20#lead_box
     .span-12= @club.name
-    = link_to '(edit)', edit_club_path(@club)
-    = link_to '(add)', new_club_path()
   %div.span-20
     %span.span-3
       %h3 Address
