--- a/app/views/members/_member.html.haml
+++ b/app/views/members/_member.html.haml
@@ -1,3 +1,3 @@
 %tr
-  %td= link_to member.name, [@club,member] 
-  %td= link_to 'Delete', member, :confirm => 'Are you sure?', :method => :delete
+  %td= link_to member.name, member
+  %td= member.email
