--- a/app/views/members/edit.html.haml
+++ b/app/views/members/edit.html.haml
@@ -1,6 +1,5 @@
 %span.span-4
-  .span-4#header_box.member_background Member
-  .span-2= link_to 'Remove Member', @member, :confirm => 'Are you sure?', :method => :delete
+  .span-4#lead_box.member_background Member
 %span.span-16
   %span.span-last#lead_box Edit member information
   = render 'form'
