--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,22 +1,21 @@
 %span.span-4
   .span-4#lead_box.member_background Members
-  .span-4#header_box.club_background 
-    = link_to "Club", current_club
-  .span-4#header_box.meeting_background 
-    = link_to "Meetings", meetings_path
 %span.span-16
   .span-20#lead_box
     = link_to @club.name, @club, :style => 'text-decoration: none'
+  .span-20#header_box Active 
   %table
     %tr
       %th Name
       %th e-mail 
-      %th
-    - @members.each do |member|
-      %tr
-        %td= link_to member.name, member
-        %td= member.email
+    = render :partial => 'member', :collection => @members_active
   
+  .span-20#header_box In-active 
+  %table
+    %tr
+      %th Name
+      %th e-mail 
+    = render :partial => 'member', :collection => @members_inactive
   = link_to '(New Member)', new_member_path
 %br
 
