--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,21 +1,23 @@
 %span.span-4
   .span-4#lead_box.member_background Members
+  .span-4= link_to "(Add Membership)", new_relationship_path
 %span.span-16
   .span-20#lead_box
     = link_to @club.name, @club, :style => 'text-decoration: none'
-  .span-20#header_box Active 
+  .span-20#header_box Members
+  %table
+    = render :partial => 'relationship', :collection => @club.relationships("Member")
+   
+  .span-20#header_box Guests
+  %table
+    = render :partial => 'relationship', :collection => @club.relationships("Guest")
+
+  .span-20#header_box Officers
   %table
     %tr
       %th Name
       %th e-mail 
-    = render :partial => 'member', :collection => @members_active
-  
-  .span-20#header_box In-active 
-  %table
-    %tr
-      %th Name
-      %th e-mail 
-    = render :partial => 'member', :collection => @members_inactive
+    = render :partial => 'relationship', :collection => @club.relationships("Officer")
   = link_to '(New Member)', new_member_path
 %br
 
