Baisc structure in place for relationships.  Now invite members?
Inviting membership is something that's done all over the place.  I'm doing it badly because I only have a few members, but this will _not_ scale.

So:  How to search for, add exisiting members, and create new members if they're not already in the system?  How to reconcile the unique identity problem for members?  If they belong to a specific club... if they belong to a specific club.  If they belong to a specific club, yes that makes listing all memberships a little problematic (not really), but then I stop worrying about the edge cases of multi-club members and focus purely on getting it to work in a sensible manner.  All of the cludge that I've been fighting (and learning) through is immaterial. Yippee!

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -34,8 +34,10 @@
           = render :partial => 'role', :collection => @member.roles
         / TODO: Add in new Role function for a person
     %span.span-12
-      %h3.club_background My Memberships
+      %h3.member_background Memberships
       %span.span-12
         %table
-          = render :partial => 'club', :collection => @member.relationships.all
-      .span-6= link_to "New Membership", new_relationship_path
+          %tr
+            %th Club
+            %th Membership
+          = render :partial => 'club', :collection => @member.clubs
