--- a/app/views/members/_club.html.haml
+++ b/app/views/members/_club.html.haml
@@ -1,2 +1,4 @@
-%div
-  = link_to club.name, club
+%tr
+  %td= link_to club.club_name, club.club_object
+  %td= link_to club.type, club
+  %td= link_to "(Edit)", edit_relationship_path(club)
