Format member.new, relationship.new
TODO: Make sure that all the forms are consistent across the board.  Simplify.

--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -5,5 +5,4 @@
 %span.span-16
   %span.span-last#header_box New member
   = render 'form'
-
-= link_to 'Back', members_path
+  = link_to 'All Members', members_path
