--- a/app/views/relationships/new.html.haml
+++ b/app/views/relationships/new.html.haml
@@ -1,11 +1,8 @@
-%span.span-4
+%div.span-4
   .span-4#lead_box.club_background Club
-  - if current_user.admin_for(current_club.id)
-    .span-4#header_box
-      = link_to '(edit)', edit_club_path(current_club)
-%span-16
-  %h2= current_club.name
-  %h3 New Membership
+%div.span-18
+  %h2
+    New Membership for the 
+    = current_club.name
   = render 'form'
-
-= link_to 'Back', relationships_path
+  = link_to 'Back to Club', current_club
