Slowly piecing search together.  I can feel it.

--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -7,5 +7,5 @@
     - if @editing_self
       = f.input :password
       = f.input :password_confirmation
- 
+  // TODO: Select for relationship and default to member?  Guest?   
   = f.buttons :commit
