Adding new members flow working a little better.
Need to only add unique members that haven't been added already.  Have to query out where club not equal.  Also have to change to some sort of check boxes.  Radio buttons??

--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -18,6 +18,6 @@
       %th Name
       %th e-mail 
     = render :partial => 'relationship', :collection => @club.relationships("Officer")
-  = link_to '(New Membership)', new_relationship_path
+  = link_to '(New Membership)', :action => "search"
 %br
 
