--- a/app/views/members/search.html.haml
+++ b/app/views/members/search.html.haml
@@ -1,5 +1,24 @@
-%h2 Searching for a great member
-%p fill in the blanks for a search form.  AJAX? 
-%p= @params
-- @members.each do |member|
-  %p= member.name
+%span.span-4
+  .span-4#lead_box.member_background Memberships
+  // .span-4= link_to "(Add Membership)", new_relationship_path
+%span.span-16
+  .span-20#lead_box
+    = link_to current_club.name, current_club, :style => 'text-decoration: none'
+  .span-20#header_box Searching for another great member
+   
+  .span-20
+    = form_tag members_search_path, :method => 'get' do 
+      = "Name or e-mail"
+      = text_field_tag :search, params[:search]
+      = submit_tag "Search", :name => nil
+  .span-20
+    %h4 Candidates
+    %table
+      %th Add
+      %th Name
+      %th E-Mail
+      - @members.each do |member|
+        %tr
+          %td= link_to "(add)", new_member_relationship_path(member) 
+          %td= link_to member.name, member
+          %td= member.email
