--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -25,5 +25,5 @@
     = link_to "(+) New Meeting", new_meeting_path
   %span.span-10
     %h4.member_background Members
-    = render :partial => 'shared/member', :collection => @club.members.sort_by(&:name)
+    = render :partial => 'shared/member', :collection => @club.members
     = link_to "(+) New Member", members_search_path
