Member show now has proper membership listing

--- a/app/views/members/_relationship.html.haml
+++ b/app/views/members/_relationship.html.haml
@@ -1,4 +1,5 @@
 %tr
-  %td= link_to relationship.member_object.name, relationship.member_object
+  %td= link_to relationship.club_name, relationship.club_object
+  %td= relationship.type
   / %td= link_to relationship.member_name, relationship.member
   / %td= member.email
