Member roles moved to semantic_form_for

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -41,6 +41,5 @@
             %th Club
             %th Membership
           %tr
-            %td= @member.relationships.count
-          // = render :partial => 'relationship', :collection => @member.relationships
+            = render :partial => 'relationship', :collection => @member.relationships
 
