--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -1,13 +1,14 @@
 %span.span-4
   .span-4#lead_box.meeting_background Meeting
   .span-4#header_box
-    = link_to '(edit)', edit_meeting_path(@meeting)
+    = link_to '(Change)', edit_meeting_path(@meeting)
   .span-4#header_box
-    = link_to '(add)', new_meeting_path()
+    = link_to '(New Meeting)', new_meeting_path()
 %span.span-16  
   .span-16#lead_box
     .span-10= @meeting.meeting_date_pretty
-  .span-16#lead_box
+  %h2 
+    Theme
     = @meeting.theme
   .span-16
     %h4.span-2
