--- a/app/views/members/_member.html.haml
+++ b/app/views/members/_member.html.haml
@@ -1,3 +1,3 @@
 %tr
-  %td= link_to relationship.member_name, relationship.member
+  %td= link_to member.member_name, member.member
   / %td= member.email
