--- a/app/views/roles/_form.html.haml
+++ b/app/views/roles/_form.html.haml
@@ -8,8 +8,8 @@
   %div.span-20
     %span-16
       = f.inputs do 
-        = f.input :member_id, :as => :select, :collection => @meeting.club.members
-        = f.input :role_type_id, :as => :radio, :collection => RoleType.all
+        = f.input :member_id, :as => :radio, :collection => @meeting.club.members
+        = f.input :role_type_id, :as => :radio, :collection => RoleType.all, :label => "Role"
         = f.input :title
       .actions
         = f.buttons
