Relationship and membership sorted with custom route

--- a/app/views/members/_relationship.html.haml
+++ b/app/views/members/_relationship.html.haml
@@ -1,5 +1,3 @@
 %tr
-  %td= link_to relationship.club_name, relationship.club_object
-  %td= relationship.type
-  / %td= link_to relationship.member_name, relationship.member
-  / %td= member.email
+  %td= link_to relationship.member_name, relationship.member_object
+  %td= relationship.member_email
