--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -41,5 +41,5 @@
             %th Club
             %th Membership
           %tr
-            = render :partial => 'relationship', :collection => @member.relationships
+            = render :partial => 'membership', :collection => @member.relationships
 
