--- a/app/views/relationships/_member_form.html.haml
+++ b/app/views/relationships/_member_form.html.haml
@@ -5,11 +5,9 @@
       %ul
         - @relationship.errors.full_messages.each do |msg|
           %li= msg
-  %h2= @relationship.club_name
-  %h3= @relationship.member_object.name
   - f.inputs do
     = f.input :member, :as => :hidden
-    = f.input :type, :as => :select, :collection => relationship_types
+    = f.input :type, :as => :radio, :collection => relationship_types
     = f.input :club, :as => :hidden
 
   = f.buttons :commit
