--- a/app/views/members/_membership.html.haml
+++ b/app/views/members/_membership.html.haml
@@ -1,4 +1,4 @@
 %tr
-  %td= link_to "(change)", edit_membership_path
-  %td= link_to membership.member_object.name, membership.member_object
-  %td= membership.member_object.email
+  %td= link_to "(change)", edit_membership_path(membership)
+  %td= link_to membership.club_name, membership.club_object
+  %td= membership.type
