--- a/app/views/members/search.html.haml
+++ b/app/views/members/search.html.haml
@@ -4,34 +4,27 @@
 %span.span-16
   .span-20#lead_box
     = link_to current_club.name, current_club, :style => 'text-decoration: none'
-  .span-20#header_box Searching for another great member
+  .span-20#header_box Search for another great member by name or e-mail:
    
   .span-20
+    
     = form_tag members_search_path, :method => 'get' do 
-      = "Name or e-mail"
       = text_field_tag :search, params[:search]
-      = submit_tag "Search", :name => nil
+      #test= submit_tag "Search", :name => nil
   .span-20
     - unless @members.nil?
-      %h4 Candidates
-      %table
-        %th Add
-        %th Name
-        %th E-Mail
-        - @members.each do |member|
-          %tr
-            %td= link_to "(add)", new_member_relationship_path(member) 
-            %td= link_to member.name, member
-            %td= member.email
+      - if @members.count == 0 
+        %h3 No candidates found either matching or not already in club
+        %h3= link_to "Create a new member?", new_member_path
+      - else
+        %h4 Candidates
+        %table
+          %th Add
+          %th Name
+          %th E-Mail
+          - @members.each do |member|
+            %tr
+              %td= link_to "(add)", new_member_relationship_path(member) 
+              %td= link_to member.name, member
+              %td= member.email
 
-    - unless @existing.nil?
-      %h4 Existing matching members
-      %table
-        %th Add
-        %th Name
-        %th E-Mail
-        - @existing.each do |member|
-          %tr
-            %td= link_to "(change)", edit_member_path(member) 
-            %td= link_to member.name, member
-            %td= member.email
