--- a/app/views/relationships/edit.html.haml
+++ b/app/views/relationships/edit.html.haml
@@ -1,13 +1,11 @@
 %span.span-4
   .span-4#lead_box.member_background Membership
 %span.span-19
-  %span-19#lead_box= "Edit membership for " + @member.name
   %span-19#lead_box
-    In the 
-    = @relationship.club_name
-
+    = "Edit membership " 
+    = " for " + @member.name
+  %span-19#lead_box
   = render 'member_form'
 
-  = link_to 'Show', @relationship
-  \|
-  = link_to 'Back', relationships_path
+  = link_to 'Destroy', @relationship, :confirm => 'Are you sure?', :method => :delete
+
