--- a/app/views/meetings/_role.html.haml
+++ b/app/views/meetings/_role.html.haml
@@ -1,6 +1,9 @@
 %tr
   %td= role.member_name
   %td= role.role_type
+  %td= role.ordinal
   %td= link_to 'Change', edit_meeting_role_path(@meeting, role)
   %td= link_to 'Drop', [@meeting, role], :confirm => 'Are you sure?', :method => :delete
+  %td= link_to 'Up', :controller => "roles", :action => "up", :id => role
+  %td= link_to 'Down', :controller => "roles", :action => "down", :id => role
   /%td= link_to meeting.meeting_date_pretty, club_meeting_path(@club, meeting) 
