--- a/app/views/layouts/_nav_tabs.html.haml
+++ b/app/views/layouts/_nav_tabs.html.haml
@@ -1,8 +1,8 @@
-.span-3#nav_box.member_background 
-  = link_to 'My Profile', current_user
-.span-3#nav_box.club_background 
+.span-3
+  = link_to 'Me', current_user
+.span-3
   = link_to 'My Club', current_club 
-.span-3#nav_box.meeting_background
+.span-3
   = link_to 'Meetings', meetings_path 
-.span-3#nav_box.member_background
+.span-3.last
   = link_to 'Members', members_path
