--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,12 +21,6 @@
   %p#notice= notice 
   %p#class= alert
   .container
-    .span-24.site_title
-      .span-10
-        TM Schedule
-      .span-12
-        .span-10.log_in_bar= render "layouts/nav_login"
-        - if logged_in
-          .span-12.log_in_bar= render "layouts/nav_tabs"
+    .span-24= render "layouts/header"
     .span-24
       = yield
