Back on the road!

--- a/app/views/layouts/_nav_tabs.html.haml
+++ b/app/views/layouts/_nav_tabs.html.haml
@@ -1,8 +1,8 @@
-.span-3
+.span-3.member_background
   = link_to 'Me', current_user
-.span-3
-  = link_to 'My Club', current_club 
-.span-3
+.span-3.club_background
+  / = link_to 'My Club', current_club 
+.span-3.meeting_background
   = link_to 'Meetings', meetings_path 
-.span-3.last
+.span-3.last.member_background
   = link_to 'Members', members_path
