--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -1,14 +1,13 @@
 %span.span-4
   .span-4#lead_box.meeting_background Meeting
-  .span-4#header_box
+  .span-4#action_box
     = link_to '(Change)', edit_meeting_path(@meeting)
-  .span-4#header_box
+  .span-4#action_box
     = link_to '(New Meeting)', new_meeting_path()
-%span.span-16  
-  .span-16#lead_box
-    .span-3#labeler Date
-    .span-10= @meeting.meeting_date_pretty
-  %h2 
+%span.span-16.last 
+  .span-16.last#lead_box
+    = @meeting.meeting_date_pretty
+  .span-16.last 
     .span-3#labeler Theme
     = @meeting.theme
   %h2 
