--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -2,7 +2,7 @@
   = "Member - " + @member.name
 .span-4
   .span-4#lead_box.member_background Member
-  #header_box
+  #action_box
     .span-4= link_to '(Edit)', edit_member_path(@member)
     .span-4= link_to '(Add)', new_member_path()
 .span-18#lead_box
